# WatchWise

./: .gitignore  .prettierrc  README.md  commitlint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/ISSUE_TEMPLATE/: feature-request.md
watchwise-api/: compose.yaml  composer.json  pint.json
watchwise-api/config/: bundles.php
watchwise-api/migrations/: Version20231215013127.php
watchwise-api/src/Controller/: HomeController.php
watchwise-api/src/DataFixtures/: AbstractFixtures.php  AppFixtures.php  UserFixtures.php
watchwise-api/src/Entity/: User.php
watchwise-api/translations/: validators.fr.yaml
watchwise-nest/: package.json  pnpm-lock.yaml
watchwise-nest/src/: main.ts
watchwise-server/: Cargo.toml  endpoint.http  http-client.env.json
watchwise-server/src/: main.rs
watchwise-server/src/interactor/: media.rs
